--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
   box-sizing: border-box;
   font-family: "Poppins" , sans-serif;
 }
+
+html{
+  cursor: default;
+}
+
 body{
   min-height: 100vh;
   width: 100%;
